@@ -2,7 +2,7 @@ Package: R2admb
 Type: Package
 Title: ADMB to R interface functions
 Version: 0.7.2
-Date: 2011-05-05
+Date: 2011-07-11
 Author: Ben Bolker, Hans Skaug
 Maintainer: Ben Bolker <bolker@mcmaster.ca>
 Description: A series of functions to call AD Model Builder (i.e., compile and run models) from within R, read the results back into R as "admb" objects, and provide standard accessors (i.e. coef(), vcov(), etc.)
