@@ -1,4 +1,5 @@
-export(setup_admb,clean_admb,do_admb,stdEr,run.control,mcmc.control)
+export(setup_admb,clean_admb,do_admb,stdEr,run.control,mcmc.control,
+       read_pars,write_pin,write_dat)
 import(ggplot2)
 
 S3method(print,admb)
